15 August 2007: Wouter
	- crypto calls to verify signatures.
	- unit test for rrsig verification.

14 August 2007: Wouter
	- default outgoing ports changed to avoid port 2049 by default.
	  This port is widely blocked by firewalls.
	- count infra lameness cache in memory size.
	- accounting of memory improved
	- outbound entries are allocated in the query region they are for.
	- extensive debugging for memory allocations.
	- --enable-lock-checks can be used to enable lock checking.
	- protect undefs in config.h from autoheaders ministrations.
	- print all received udp packets. log hex will print on multiple
	  lines if needed.
	- fixed error in parser with backwards rrsig references.
	- mark cycle targets for iterator did not have CD flag so failed
	  its task.

13 August 2007: Wouter
	- fixup makefile, if lexer is missing give nice error and do not
	  mess up the dependencies.
	- canonical compare routine updated.
	- canonical hinfo compare.
	- printout list of the queries that the mesh is working on.

10 August 2007: Wouter
	- malloc and free overrides that track total allocation and frees.
	  for memory debugging.
	- work on canonical sort.

9 August 2007: Wouter
	- canonicalization, signature checks
	- dname signature label count and unit test.
	- added debug heap size print to memory printout.
	- typo fixup in worker.c
	- -R needed on solaris.
	- validator override option for date check testing.

8 August 2007: Wouter
	- ldns _raw routines created (in ldns trunk).
	- sigcrypt DS digest routines
	- val_utils uses sigcrypt to perform signature cryptography.
	- sigcrypt keyset processing

7 August 2007: Wouter
	- security status type.
	- security status is copied when rdata is equal for rrsets.
	- rrset id is updated to invalidate all the message cache entries
	  that refer to NSEC, NSEC3, DNAME rrsets that have changed.
	- val_util work
	- val_sigcrypt file for validator signature checks.

6 August 2007: Wouter
	- key cache for validator.